Eliminating Findbugs warnings.